--- a/src/pug/pages/services.pug
+++ b/src/pug/pages/services.pug
@@ -4,15 +4,15 @@ block content
 	
 	header.header.header-primary
 		.container
-			.header-row
-				a.logo-group(href="#!")
-					svg.svg-logo-icon
-						use(href='../img/sprite.svg#svg-logo-icon')
-					svg.svg-logo-txt
-						use(href='../img/sprite.svg#svg-logo-txt')
-	
-				.header-title
-					.h-18 Услуги
+			
+			a.logo-group(href="index.html")
+				svg.svg-logo-icon
+					use(href='../img/sprite.svg#svg-logo-icon')
+				svg.svg-logo-txt
+					use(href='../img/sprite.svg#svg-logo-txt')
+
+			.header-title
+				.h-18 Услуги
 	main.main-inner
 		section.services
 			.container
