--- a/src/pug/ui/nav-menus.pug
+++ b/src/pug/ui/nav-menus.pug
@@ -22,16 +22,15 @@ html(lang="ru")
 				h2 Header menu
 				header.header.header-primary
 					.container
-						.header-row
-							a.logo-group(href="#!")
-								svg.svg-logo-icon
-									use(href='../img/sprite.svg#svg-logo-icon')
-								svg.svg-logo-txt
-									use(href='../img/sprite.svg#svg-logo-txt')
-				
-							.header-title
-								.h-18 Оформление заявки
-								//- .fs-13 Подзаголовок
+						a.logo-group(href="#!")
+							svg.svg-logo-icon
+								use(href='../img/sprite.svg#svg-logo-icon')
+							svg.svg-logo-txt
+								use(href='../img/sprite.svg#svg-logo-txt')
+			
+						.header-title
+							.h-18 Оформление заявки
+							.fs-13 Подзаголовок
 				h2.db-h2 Bottom menu
 
 				.container-dashboard__content
