--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -4,15 +4,14 @@ block content
 	
 	header.header.header-primary
 		.container
-			.header-row
-				a.logo-group(href="#!")
-					svg.svg-logo-icon
-						use(href='../img/sprite.svg#svg-logo-icon')
-					svg.svg-logo-txt
-						use(href='../img/sprite.svg#svg-logo-txt')
-	
-				.header-title
-					.h-18 Главная
+			a.logo-group(href="#!")
+				svg.svg-logo-icon
+					use(href='../img/sprite.svg#svg-logo-icon')
+				svg.svg-logo-txt
+					use(href='../img/sprite.svg#svg-logo-txt')
+
+			.header-title
+				.h-18 Главная
 	main.main
 		section.promo(style="background-image: -webkit-image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x); background-image: image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x);")
 			.container
@@ -37,7 +36,7 @@ block content
 
 		section.faq
 			.container
-				h2.h2 Вопросы / Ответы
+				h2.h2.mb-25 Вопросы / Ответы
 				.acordion-wrapper(data-mode='single')
 					
 					.acordion-item.acordion-item--active
