--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -90,7 +90,14 @@ body {
     
 }
 p, h1, h2, h3,h4,ul,ol{margin: 0;}	
-
+button{
+    background: none;
+    border:0;
+    font-size: inherit;
+    padding: 0;
+    font-family: var(--font-family);
+    &:focus{outline: none;}
+}
 .container, .container-small{
     width: 100%;
     max-width: var(--container_Width);
@@ -103,7 +110,7 @@ p, h1, h2, h3,h4,ul,ol{margin: 0;}
    grid-template-columns: 1fr;
     gap:15px;
 }
-.main, .main-inner{padding-bottom: 85px;}
+.main, .main-inner{padding-bottom: 65px;}
 .main-inner{padding-top: 16px;}
 .badge{
     position: relative;
