--- a/src/pug/pages/single-service.pug
+++ b/src/pug/pages/single-service.pug
@@ -22,7 +22,7 @@ block content
 					.service-link__body
 						.service-link__text
 							.h-18 Технический паспорт является основным документом технического учета, формируемым по результатам технической инвентаризации объекта недвижимости
-						.price-item от 10 500 ₽
+						.price-item.fs-26 от 10 500 ₽
 						a.btn-primary(href="#!") Перейти
 
 				.about-service-text.fs-16
@@ -40,10 +40,10 @@ block content
 							.gallery-item
 								img(src='./img/gallery/3.webp', srcset='./img/gallery/3@2x.webp 2x' width='275' height='205' loading='lazy' alt='img')
 				
-				.service-set
-					.service-set__cost
-						span.fs-18 Цена
-						span.h-27 10 500 ₽
+				
+				.total-cost
+					span.fs-18 Цена
+					span.h-27 10 500 ₽
 
 				.checkbox-list
 					.checkbox-list__title Дополнительные услуги
