--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @use "sections/_faq";
 @use "sections/_services-page";
 @use "sections/_single-service";
+@use "sections/_basket-page";
 
 
 // @import "base/_grids";
