--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,6 +11,8 @@ block content
 			a(href="./main.html") Главная
 			a(href="./services.html") Услуги
 			a(href="./single-service.html") Об услуге
+			a(href="./basket-page.html") Корзина
+			
 
 			
 		
