--- a/src/pug/layouts/layout-page.pug
+++ b/src/pug/layouts/layout-page.pug
@@ -19,9 +19,7 @@ html(lang="ru")
 			!{customStyle}
 	
 	body(class=(bodyCl !=="" ? bodyCl : ''))
-		
-
-		
+		.page-content
 			block content
 		
 		
