--- a/src/pug/pages/single-service.pug
+++ b/src/pug/pages/single-service.pug
@@ -41,7 +41,7 @@ block content
 								img(src='./img/gallery/3.webp', srcset='./img/gallery/3@2x.webp 2x' width='275' height='205' loading='lazy' alt='img')
 				
 				
-				.total-cost
+				.total-cost.total-cost--border
 					span.fs-18 Цена
 					span.h-27 10 500 ₽
 
