--- a/src/pug/pages/basket-page.pug
+++ b/src/pug/pages/basket-page.pug
@@ -67,10 +67,15 @@ block content
 							.price-item 3 000 ₽
 							.basket-card-btn
 								button(type="button" aria-label="clean").btn-clean
-				.basket-total
+			
+			.button-wrapper.basket-total.mb-0
+				.container
 					.total-cost
 						span.fs-18 Цена
 						span.h-27 10 500 ₽
+					
+					a.btn-primary(href="#!") Оформить заявку
+					
 	include ../sections/_footer-menu
 	
 	-var title = "Услуги";
