--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -98,6 +98,13 @@ button{
     font-family: var(--font-family);
     &:focus{outline: none;}
 }
+.page-content{
+    display: flex;
+   flex-direction: column;
+   min-height: 100vh;
+   .header{width: 100%;flex-shrink: 0;}
+   main{width: 100%;flex-grow: 1;}
+}
 .container, .container-small{
     width: 100%;
     max-width: var(--container_Width);
@@ -111,7 +118,12 @@ button{
     gap:15px;
 }
 .main, .main-inner{padding-bottom: 65px;}
-.main-inner{padding-top: 16px;}
+.main-inner{
+    padding-top: 16px;
+    display: flex;
+    flex-direction: column;
+    &>*{width: 100%;}
+}
 .badge{
     position: relative;
     display: flex;
