--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -50,7 +50,7 @@
 }
 .txt-muted{color: var(--vtorostepennyy-tekst);}
 .mb-25{margin-bottom: 25px;}
-
+.mb-0{margin-bottom: 0!important;}
 .link,.link-border{
 	background: none;
 	border:0;
