--- a/src/scss/sections/_single-service.scss
+++ b/src/scss/sections/_single-service.scss
@@ -76,8 +76,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	border-top:1px solid #EBEDF5;
-	border-bottom:1px solid #EBEDF5;
+	
 	.h-27{
 		margin-left: auto;
 		text-align: right;
@@ -85,6 +84,10 @@
 	.fs-18{
 		font-weight: 500;
 	}
+}
+.total-cost.total-cost--border{
+   border-top:1px solid #EBEDF5;
+	border-bottom:1px solid #EBEDF5;
 }
 .checkbox-list{
 	&__title{
