--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,6 +12,8 @@ block content
 			a(href="./services.html") Услуги
 			a(href="./single-service.html") Об услуге
 			a(href="./basket-page.html") Корзина
+			a(href="./history-page.html") История обращений
+			
 			
 
 			
