--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -50,3 +50,16 @@ html(lang="ru")
 							.h-18 Консультация по документам
 						.service-card__body
 							p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
+					br
+					.history-item
+						.history-item__info
+							.fs-13.txt-muted 01.12.2025
+							.fs-16 #[span.txt-muted #] 123456789
+								
+						.label-light В обработке
+					br
+					.history-item
+						.history-item__info
+							.fs-13.txt-muted 11.11.2025
+							.fs-16 #[span.txt-muted #] 987654321
+						.label-light Выезд на объект
