--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @use "sections/_services-page";
 @use "sections/_single-service";
 @use "sections/_basket-page";
+@use "sections/_history";
 
 
 // @import "base/_grids";
