--- a/src/pug/pages/bid-page.pug
+++ b/src/pug/pages/bid-page.pug
@@ -11,16 +11,15 @@ block content
 					use(href='../img/sprite.svg#svg-logo-txt')
 
 			.header-title
-				.h-18 История обращений
+				.h-18 Заявка № 123456789
 				
 	main.main-inner
-		section.history-content
+		section.bid-content
 			.container
-				.search-wrapper
-					form(action="" method="method")
-						.form-item-slim
-							input.inp(type="text" name="inp_name")
-							button.search-button(type="submit")
+				.bid-content-header
+					.fs-15.date-box 01.12.2025
+					.label-light В обработке 
+				
 				.history-list
 					//single
 					.history-item
