--- a/src/pug/pages/history-page-admin.pug
+++ b/src/pug/pages/history-page-admin.pug
@@ -29,6 +29,12 @@ block content
 								.fs-13.txt-muted 01.12.2025
 								.fs-16 #[span.txt-muted #] 123456789
 							.label-light В обработке
+						
+						.history-item__customer.fs-15
+							.customer-name Александр Иванов
+							.customer-contacts +7 (123) 123-45-67
+					
+					
 					//single
 					.history-item
 						.history-item__head
@@ -36,6 +42,10 @@ block content
 								.fs-13.txt-muted 11.11.2025
 								.fs-16 #[span.txt-muted #] 987654321
 							.label-inter Выезд на объект
+						
+						.history-item__customer.fs-15
+							.customer-name Валентина Петрищенкова
+							.customer-contacts +7 (123) 123-45-67
 					//single
 					.history-item
 						.history-item__head
@@ -43,6 +53,11 @@ block content
 								.fs-13.txt-muted 05.08.2025
 								.fs-16 #[span.txt-muted #] 456456
 							.label-inter Согласование
+						
+						.history-item__customer.fs-15
+							.customer-name Константин Константинович
+							.customer-contacts +7 (123) 123-45-67
+					
 					//single
 					.history-item
 						.history-item__head
@@ -50,6 +65,11 @@ block content
 								.fs-13.txt-muted 07.03.2025
 								.fs-16 #[span.txt-muted #] 7867567
 							.label-inter Формирование документов
+						
+						.history-item__customer.fs-15
+							.customer-name Валерий Арамо
+							.customer-contacts +7 (123) 123-45-67
+					
 					//single
 					.history-item
 						.history-item__head
@@ -57,6 +77,9 @@ block content
 								.fs-13.txt-muted 07.03.2025
 								.fs-16 #[span.txt-muted #] 345345356
 							.label-inter Подача в&nbsp;Росреестр
+						.history-item__customer.fs-15
+							.customer-name Татьяна Сидорова
+							.customer-contacts +7 (123) 123-45-67
 					//single
 					.history-item
 						.history-item__head
@@ -64,6 +87,9 @@ block content
 								.fs-13.txt-muted 01.03.2025
 								.fs-16 #[span.txt-muted #] 67854
 							.label-done Закрытие
+						.history-item__customer.fs-15
+							.customer-name Петр Васильев
+							.customer-contacts +7 (123) 123-45-67
 					//single
 					.history-item
 						.history-item__head
@@ -71,6 +97,9 @@ block content
 								.fs-13.txt-muted 01.03.2025
 								.fs-16 #[span.txt-muted #] 67854
 							.label-failure Отказ
+						.history-item__customer.fs-15
+							.customer-name Александр
+							.customer-contacts +7 (123) 123-45-67
 
 	include ../sections/_footer-menu
 	
