--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,6 +13,9 @@ block content
 			a(href="./single-service.html") Об услуге
 			a(href="./basket-page.html") Корзина
 			a(href="./history-page.html") История обращений
+			a(href="./history-page-admin.html") История обращений-Admin
+			a(href="./bid-page.html") Заявка. Пользователь
+
 			
 			
 
