--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @use "sections/_single-service";
 @use "sections/_basket-page";
 @use "sections/_history";
+@use "sections/_bid-page";
 
 
 // @import "base/_grids";
