--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -4,7 +4,7 @@
 	.inp,  .textarea{
 		width: 100%;
 		display: block;
-		border: 1px solid #b1b8d5;
+		border: 1px solid  #abaebc;
 		border-radius: 5px;
 		height: 60px;
 		background: var(--belyy);
