--- a/src/pug/pages/history-page.pug
+++ b/src/pug/pages/history-page.pug
@@ -17,7 +17,7 @@ block content
 		section.history-content
 			.container
 				.search-wrapper
-					form(action="" method="method")
+					form(action="" method="method" placeholder="Поиск")
 						.form-item-slim
 							input.inp(type="text" name="inp_name")
 							button.search-button(type="submit")
