--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,9 +12,10 @@ block content
 			a(href="./services.html") Услуги
 			a(href="./single-service.html") Об услуге
 			a(href="./basket-page.html") Корзина
-			a(href="./history-page.html") История обращений
+			a(href="./history-page.html") История обращений- Пользователь
 			a(href="./history-page-admin.html") История обращений-Admin
-			a(href="./bid-page.html") Заявка. Пользователь
+			a(href="./bid-page-customer.html") Заявка- Пользователь
+			a(href="./bid-page-admin.html") Заявка- Admin
 
 			
 			
