--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -89,7 +89,11 @@ body {
     color: var(--osnovnoy-tekst);
     
 }
-p, h1, h2, h3,h4,ul,ol{margin: 0;}	
+p, h1, h2, h3,h4,ul,ol{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}	
 button{
     background: none;
     border:0;
