--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -37,18 +37,16 @@
 	line-height: 150%;
 	color: var(--zagolovok);
 }
-.fs-15,.fs-16, .fs-18{
-	
-	line-height: 167%;
-}
+.fs-15,.fs-16, .fs-18{line-height: 167%;}
+
 .fs-18{font-weight: 400;}
-.fs-15{font-size: 15px;}
+.fs-15, .muted-15{font-size: 15px;}
 .fs-16{font-size: 16px;line-height: 1.5;}
 .fs-13{
 	font-size: 13px;
 	line-height: 15px;
 }
-.txt-muted{color: var(--vtorostepennyy-tekst);}
+.txt-muted,.muted-15{color: var(--vtorostepennyy-tekst);}
 .mb-25{margin-bottom: 25px;}
 .mb-0{margin-bottom: 0!important;}
 .link,.link-border{
