--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @use "sections/_basket-page";
 @use "sections/_history";
 @use "sections/_bid-page";
+@use "sections/_bid-customer";
 
 
 // @import "base/_grids";
