--- a/src/pug/pages/basket-page.pug
+++ b/src/pug/pages/basket-page.pug
@@ -7,9 +7,9 @@ block content
 			
 			a.logo-group(href="index.html")
 				svg.svg-logo-icon
-					use(href='../img/sprite.svg#svg-logo-icon')
+					use(href='./img/sprite.svg#svg-logo-icon')
 				svg.svg-logo-txt
-					use(href='../img/sprite.svg#svg-logo-txt')
+					use(href='./img/sprite.svg#svg-logo-txt')
 
 			.header-title
 				.h-18 Корзина
