--- a/src/pug/pages/bid-page-admin.pug
+++ b/src/pug/pages/bid-page-admin.pug
@@ -6,9 +6,9 @@ block content
 		.container
 			a.logo-group(href="index.html")
 				svg.svg-logo-icon
-					use(href='../img/sprite.svg#svg-logo-icon')
+					use(href='./img/sprite.svg#svg-logo-icon')
 				svg.svg-logo-txt
-					use(href='../img/sprite.svg#svg-logo-txt')
+					use(href='./img/sprite.svg#svg-logo-txt')
 
 			.header-title
 				.h-18 Заявка № 123456789
@@ -22,36 +22,38 @@ block content
 		
 		section.messages-content
 			.container.gap-15
-				.message-wrapper.admin-message
-					.message-item
-						.fs-13 Александ
-						.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					.message-info 
-						span 12:03 
-						span 01.12.25
+				h2.h2 кекеке
+				.messages-content
+					.message-wrapper.admin-message
+						.message-item
+							.fs-13 Александ
+							.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					
+					.message-wrapper
+						.message-item
+							.fs-13 Александ
+							.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					.message-wrapper
+						.message-item
+							.fs-13 Александ
+							.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					.message-wrapper.admin-message
+						.message-item
+							.fs-13 Александ
+							.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						.message-info 
+							span 12:03 
+							span 01.12.25
 				
-				.message-wrapper
-					.message-item
-						.fs-13 Александ
-						.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					.message-info 
-						span 12:03 
-						span 01.12.25
-				.message-wrapper
-					.message-item
-						.fs-13 Александ
-						.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					.message-info 
-						span 12:03 
-						span 01.12.25
-				.message-wrapper.admin-message
-					.message-item
-						.fs-13 Александ
-						.fs-15 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					.message-info 
-						span 12:03 
-						span 01.12.25
-			
 			.send-message-wrapper
 				.send-message.container
 					.form-item-slim
