--- a/src/pug/sections/_footer-menu.pug
+++ b/src/pug/sections/_footer-menu.pug
@@ -3,24 +3,24 @@ footer.nav-menu-wrapper
 		a.nav-menu-link(href="#!")
 			span.nav-menu-icon
 				svg.svg-home
-					use(href='../img/sprite.svg#svg-home')
+					use(href='./img/sprite.svg#svg-home')
 			span.nav-menu-name Главная
 		
 		a.nav-menu-link.active(href="#!")
 			span.nav-menu-icon
 				svg.svg-home
-					use(href='../img/sprite.svg#svg-doc')
+					use(href='./img/sprite.svg#svg-doc')
 			span.nav-menu-name Услуги
 		
 		a.nav-menu-link(href="#!")
 			span.nav-menu-icon
 				span.icon-label 3
 				svg.svg-home
-					use(href='../img/sprite.svg#svg-cart')
+					use(href='./img/sprite.svg#svg-cart')
 			span.nav-menu-name Корзина
 		
 		a.nav-menu-link(href="#!")
 			span.nav-menu-icon
 				svg.svg-home
-					use(href='../img/sprite.svg#svg-chat')
+					use(href='./img/sprite.svg#svg-chat')
 			span.nav-menu-name Обращения
