--- a/src/pug/ui/buttons.pug
+++ b/src/pug/ui/buttons.pug
@@ -28,7 +28,7 @@ html(lang="ru")
 					
 					br
 					hr
-					h3 пассивная кнопка либо атрибут, либо класс disabled
+					h3 пассивная кнопка -добавить либо атрибут, либо класс disabled
 					button.btn-primary(disabled) Подробнее
 					pre.
 						button.btn-primary(disabled) Подробнее
@@ -44,3 +44,15 @@ html(lang="ru")
 					a.btn-cross(href="#!" )
 					pre.
 						a.btn-cross(href="#!" )
+					hr
+					button(type="button" aria-label="clean").btn-clean
+					pre.
+						button(type="button" aria-label="clean").btn-clean
+					hr
+					button(type="button").btn-send
+					pre.
+						button(type="button").btn-send
+					hr
+					button.search-button(type="submit")
+					pre.
+						button.search-button(type="submit")
