--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -59,6 +59,19 @@ html(lang="ru")
 					pre.
 						svg.svg-bin
 							use(href='./img/sprite.svg#svg-bin')
+					svg.svg-phone
+						use(href='../img/sprite.svg#svg-phone')
+					pre.
+						svg.svg-phone
+							use(href='./img/sprite.svg#svg-phone')
+					svg.svg-email
+						use(href='../img/sprite.svg#svg-email')
+					pre.
+						svg.svg-email
+							use(href='./img/sprite.svg#svg-email')
+					svg.svg-comment
+						use(href='../img/sprite.svg#svg-comment')
+					pre.
+						svg.svg-comment
+							use(href='./img/sprite.svg#svg-comment')
 					
-					
-
