--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -39,3 +39,10 @@ svg{display: inline-block;transition: .2s; }
 		color:var(--zagolovok);
 	}
 }
+.svg-phone,
+.svg-email,
+.svg-comment{
+  width:20px;
+  height:20px;
+  color: #abaebc;
+}
