--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -49,6 +49,9 @@
 .txt-muted,.muted-15{color: var(--vtorostepennyy-tekst);}
 .mb-25{margin-bottom: 25px;}
 .mb-0{margin-bottom: 0!important;}
+.border-bot{
+	border-bottom:1px solid #EBEDF5;
+}
 .link,.link-border{
 	background: none;
 	border:0;
