--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,8 @@
 @use "sections/_basket-page";
 @use "sections/_history";
 @use "sections/_bid-page";
-@use "sections/_bid-customer";
+// @use "sections/_bid-customer";
+@use "sections/_contacts-customer";
 
 
 // @import "base/_grids";
