--- a/src/pug/pages/bid-page-customer.pug
+++ b/src/pug/pages/bid-page-customer.pug
@@ -13,41 +13,100 @@ block content
 			.header-title
 				.h-18 Заявка № 123456789
 	
-	//MAIN			
+	//MAIN
 	main.main-inner
-		section.bid-content
+		section.bid
 			.container
-				.bid-content-header
+				.bid-header.border-bot
 					.fs-15.date-box 01.12.2025
 					.label-light В обработке 
 		
-		section.bid-content
+				.bid-content.gap-15.border-bot
+					h2.h2 Услуги
+					.bid-content-list.gap-15
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 «Технический паспорт (для ресурсоснабжающих организаций)
+							
+							.bid-item-additional
+								.muted-15 Дополнительные услуги
+								ul.bid-additional-list
+									li.fs-15 Регистрация прав собственности и сделок в&nbsp;Росреестре
+									li.fs-15 Проведение геодезических и&nbsp;топографических съемок
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 Межевой план
+							
+							.bid-item-additional
+								.muted-15 Дополнительные услуги
+								ul.bid-additional-list.fs-15
+									li Подготовка документов для регистрации прав собственности
+		
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 Консультация по документам
+		//CONTACTS
+		section.customer-contacts
 			.container.gap-15
-				h2.h2 Услуги
-				.bid-content-list.gap-15
-					//SERV ITEM
-					.bid-item
-						.bid-item-title.h-16 «Технический паспорт (для ресурсоснабжающих организаций)
-						
-						.bid-item-additional
-							.muted-15 Дополнительные услуги
-							ul.bid-additional-list
-								li.fs-15 Регистрация прав собственности и сделок в&nbsp;Росреестре
-								li.fs-15 Проведение геодезических и&nbsp;топографических съемок
-					//SERV ITEM
-					.bid-item
-						.bid-item-title.h-16 Межевой план
-						
-						.bid-item-additional
-							.muted-15 Дополнительные услуги
-							ul.bid-additional-list.fs-15
-								li Регистрация прав собственности и сделок в&nbsp;Росреестре
-								li Проведение геодезических и&nbsp;топографических съемок
-	
-					//SERV ITEM
-					.bid-item
-						.bid-item-title.h-16 Консультация по документам
-	
+				h2.h2 Контактная информация
+				ul.contacts-list.gap-15
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-phone
+								use(href='./img/sprite.svg#svg-phone')
+						.contacts-item__txt
+							.fs-15.txt-muted Телефон
+							.fs-16 + 7 (123) 456-78-90
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-email
+								use(href='./img/sprite.svg#svg-email')
+						.contacts-item__txt
+							.fs-15.txt-muted E-mail
+							.fs-16 alex@domainname.ru
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-comment
+								use(href='./img/sprite.svg#svg-comment')
+						.contacts-item__txt
+							.fs-15.txt-muted Комментарий
+							.fs-16 Хотелось бы, чтобы заявка была выполнена в ближайшие 10 дней
+
+		section.messages
+			.container.gap-15
+				h2.h2 Обсуждение
+				.messages-content.gap-15
+					//USER
+					.message-wrapper
+						.message-item
+							.fs-13 Александp
+							.fs-15 Здравствуйте, подскажите пожалуйста в какие сроки эта заявка будет выполнена?
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					//ADMIN
+					.message-wrapper.admin-message
+						.message-item
+							.fs-13 Служба поддержки
+							.fs-15 Стандартные сроки на выполнение — 20 рабочих дней
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					
+					//USER
+					.message-wrapper
+						.message-item
+							.fs-13 Александp
+							.fs-15 А нельзя ли как-то ускорить процесс?
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					
+			.send-message-wrapper
+				.send-message.container
+					.form-item-slim
+						input.inp(type="text" placeholder="Сообщение")
+					button(type="button").btn-send
 	
 	include ../sections/_footer-menu
 	
