--- a/src/pug/pages/single-service.pug
+++ b/src/pug/pages/single-service.pug
@@ -6,9 +6,9 @@ block content
 		.container
 			a.logo-group(href="index.html")
 				svg.svg-logo-icon
-					use(href='../img/sprite.svg#svg-logo-icon')
+					use(href='./img/sprite.svg#svg-logo-icon')
 				svg.svg-logo-txt
-					use(href='../img/sprite.svg#svg-logo-txt')
+					use(href='./img/sprite.svg#svg-logo-txt')
 
 			.header-title
 				.h-18 Технический паспорт
