--- a/src/pug/pages/history-page.pug
+++ b/src/pug/pages/history-page.pug
@@ -28,49 +28,49 @@ block content
 							.history-item__info
 								.fs-13.txt-muted 01.12.2025
 								.fs-16 #[span.txt-muted #] 123456789
-							.label-light В обработке
+							.label.label-light В обработке
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 11.11.2025
 								.fs-16 #[span.txt-muted #] 987654321
-							.label-inter Выезд на объект
+							.label.label-inter Выезд на объект
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 05.08.2025
 								.fs-16 #[span.txt-muted #] 456456
-							.label-inter Согласование
+							.label.label-inter Согласование
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 07.03.2025
 								.fs-16 #[span.txt-muted #] 7867567
-							.label-inter Формирование документов
+							.label.label-inter Формирование документов
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 07.03.2025
 								.fs-16 #[span.txt-muted #] 345345356
-							.label-inter Подача в&nbsp;Росреестр
+							.label.label-inter Подача в&nbsp;Росреестр
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 01.03.2025
 								.fs-16 #[span.txt-muted #] 67854
-							.label-done Закрытие
+							.label.label-done Закрытие
 					//single
 					.history-item
 						.history-item__head
 							.history-item__info
 								.fs-13.txt-muted 01.03.2025
 								.fs-16 #[span.txt-muted #] 67854
-							.label-failure Отказ
+							.label.label-failure Отказ
 
 	include ../sections/_footer-menu
 	
