--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -56,10 +56,10 @@ html(lang="ru")
 							.fs-13.txt-muted 01.12.2025
 							.fs-16 #[span.txt-muted #] 123456789
 								
-						.label-light В обработке
+						.label.label-light В обработке
 					br
 					.history-item
 						.history-item__info
 							.fs-13.txt-muted 11.11.2025
 							.fs-16 #[span.txt-muted #] 987654321
-						.label-light Выезд на объект
+						.label.label-light Выезд на объект
