--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -46,3 +46,8 @@ svg{display: inline-block;transition: .2s; }
   height:20px;
   color: #abaebc;
 }
+.svg-carret{
+	width: 14px;
+	height: 8px;
+	color:#5272FF;
+}
