--- a/src/pug/pages/bid-page-customer.pug
+++ b/src/pug/pages/bid-page-customer.pug
@@ -19,8 +19,9 @@ block content
 			.container
 				.bid-header.border-bot
 					.fs-15.date-box 01.12.2025
-					.label-light В обработке 
-		
+					.bid-state-block
+						.label.label-light В обработке
+						
 				.bid-content.gap-15.border-bot
 					h2.h2 Услуги
 					.bid-content-list.gap-15
@@ -71,7 +72,7 @@ block content
 						.contacts-item__txt
 							.fs-15.txt-muted Комментарий
 							.fs-16 Хотелось бы, чтобы заявка была выполнена в ближайшие 10 дней
-
+		//CHAT
 		section.messages
 			.container.gap-15
 				h2.h2 Обсуждение
