--- a/src/pug/pages/history-page-admin.pug
+++ b/src/pug/pages/history-page-admin.pug
@@ -1,106 +1,114 @@
 extends ../layouts/layout.pug
 
 block content
-	
+	//HEADER
 	header.header.header-primary
 		.container
 			a.logo-group(href="index.html")
 				svg.svg-logo-icon
-					use(href='./img/sprite.svg#svg-logo-icon')
+					use(href='../img/sprite.svg#svg-logo-icon')
 				svg.svg-logo-txt
-					use(href='./img/sprite.svg#svg-logo-txt')
+					use(href='../img/sprite.svg#svg-logo-txt')
 
 			.header-title
-				.h-18 История обращений
-				
+				.h-18 Заявка № 123456789
+	
+	//MAIN
 	main.main-inner
-		section.history-content
+		section.bid.bid--admin
 			.container
-				.search-wrapper
-					form(action="" method="method")
-						.form-item-slim
-							input.inp(type="text" name="inp_name")
-							button.search-button(type="submit")
-				.history-list
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.12.2025
-								.fs-16 #[span.txt-muted #] 123456789
-							.label-light В обработке
-						
-						.history-item__customer.fs-15
-							.customer-name Александр Иванов
-							.customer-contacts +7 (123) 123-45-67
-					
-					
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 11.11.2025
-								.fs-16 #[span.txt-muted #] 987654321
-							.label-inter Выезд на объект
-						
-						.history-item__customer.fs-15
-							.customer-name Валентина Петрищенкова
-							.customer-contacts +7 (123) 123-45-67
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 05.08.2025
-								.fs-16 #[span.txt-muted #] 456456
-							.label-inter Согласование
-						
-						.history-item__customer.fs-15
-							.customer-name Константин Константинович
-							.customer-contacts +7 (123) 123-45-67
-					
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 07.03.2025
-								.fs-16 #[span.txt-muted #] 7867567
-							.label-inter Формирование документов
-						
-						.history-item__customer.fs-15
-							.customer-name Валерий Арамо
-							.customer-contacts +7 (123) 123-45-67
-					
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 07.03.2025
-								.fs-16 #[span.txt-muted #] 345345356
-							.label-inter Подача в&nbsp;Росреестр
-						.history-item__customer.fs-15
-							.customer-name Татьяна Сидорова
-							.customer-contacts +7 (123) 123-45-67
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.03.2025
-								.fs-16 #[span.txt-muted #] 67854
-							.label-done Закрытие
-						.history-item__customer.fs-15
-							.customer-name Петр Васильев
-							.customer-contacts +7 (123) 123-45-67
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.03.2025
-								.fs-16 #[span.txt-muted #] 67854
-							.label-failure Отказ
-						.history-item__customer.fs-15
-							.customer-name Александр
-							.customer-contacts +7 (123) 123-45-67
+				.bid-header.border-bot
+					.fs-15.date-box 01.12.2025
+					.bid-state-block
+						.label-light В обработке 
 
+				.bid-content.gap-15.border-bot
+					h2.h2 Услуги
+					.bid-content-list.gap-15
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 «Технический паспорт (для ресурсоснабжающих организаций)
+							
+							.bid-item-additional
+								.muted-15 Дополнительные услуги
+								ul.bid-additional-list
+									li.fs-15 Регистрация прав собственности и сделок в&nbsp;Росреестре
+									li.fs-15 Проведение геодезических и&nbsp;топографических съемок
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 Межевой план
+							
+							.bid-item-additional
+								.muted-15 Дополнительные услуги
+								ul.bid-additional-list.fs-15
+									li Подготовка документов для регистрации прав собственности
+		
+						//SERV ITEM
+						.bid-item
+							.bid-item-title.h-16 Консультация по документам
+		//CONTACTS
+		section.customer-contacts
+			.container.gap-15
+				h2.h2 Контактная информация
+				ul.contacts-list.gap-15
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-phone
+								use(href='./img/sprite.svg#svg-phone')
+						.contacts-item__txt
+							.fs-15.txt-muted Телефон
+							.fs-16 + 7 (123) 456-78-90
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-email
+								use(href='./img/sprite.svg#svg-email')
+						.contacts-item__txt
+							.fs-15.txt-muted E-mail
+							.fs-16 alex@domainname.ru
+					li.contacts-item
+						.contacts-item__icon
+							svg.svg-comment
+								use(href='./img/sprite.svg#svg-comment')
+						.contacts-item__txt
+							.fs-15.txt-muted Комментарий
+							.fs-16 Хотелось бы, чтобы заявка была выполнена в ближайшие 10 дней
+
+		section.messages
+			.container.gap-15
+				h2.h2 Обсуждение
+				.messages-content.gap-15
+					//USER
+					.message-wrapper
+						.message-item
+							.fs-13 Александp
+							.fs-15 Здравствуйте, подскажите пожалуйста в какие сроки эта заявка будет выполнена?
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					//ADMIN
+					.message-wrapper.admin-message
+						.message-item
+							.fs-13 Служба поддержки
+							.fs-15 Стандартные сроки на выполнение — 20 рабочих дней
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					
+					//USER
+					.message-wrapper
+						.message-item
+							.fs-13 Александp
+							.fs-15 А нельзя ли как-то ускорить процесс?
+						.message-info 
+							span 12:03 
+							span 01.12.25
+					
+			.send-message-wrapper
+				.send-message.container
+					.form-item-slim
+						input.inp(type="text" placeholder="Сообщение")
+					button(type="button").btn-send
+	
 	include ../sections/_footer-menu
 	
 	-var title = "Одна услуга";
