--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,6 +16,7 @@ block content
 			a(href="./history-page-admin.html") История обращений-Admin
 			a(href="./bid-page-customer.html") Заявка- Пользователь
 			a(href="./bid-page-admin.html") Заявка- Admin
+			a(href="./404.html") 404
 
 			
 			
