--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -6,6 +6,12 @@
 	text-transform: uppercase;
 	color: var(--zagolovok);
 }
+.h-29{
+	font-weight: 700;
+	font-size: 29px;
+	line-height: 1.21;
+	color: var(--zagolovok);
+}
 .h1, .h2, .h3{
 	margin: 0;
 	font-weight: 700;
