--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 @use "sections/_bid-page";
 // @use "sections/_bid-customer";
 @use "sections/_contacts-customer";
+@use "sections/_page-404";
 
 
 // @import "base/_grids";
