--- a/src/scss/sections/_page-404.scss
+++ b/src/scss/sections/_page-404.scss
@@ -20,7 +20,7 @@
 	.main-inner{
 		background-size: contain;
 		background-repeat: no-repeat;
-		background-position: 0 -40px;
+		background-position: 0 0;
 		width: 100%;flex-grow:1;
 		background-image: url('../img/bg-404.webp');
 		
